--- a/scss/object/component/_c-recipe.scss
+++ b/scss/object/component/_c-recipe.scss
@@ -96,6 +96,7 @@
     padding-top: 1rem;
     padding-bottom: 1rem;
     transition: 1s; //カードアニメ
+    text-align: center;
 }
 
 .c-recipe-txt__exc {
