--- a/scss/object/project/common/_p-banner.scss
+++ b/scss/object/project/common/_p-banner.scss
@@ -8,7 +8,7 @@
 }
 
 .p-banner-inner {
-    background-color: $green;
+    background-color: $d-red;
     padding: rem(16);
     width: 100%;
     height: rem(50);
@@ -41,7 +41,7 @@
         right: 0;
     }
     .p-banner-inner {
-        background-color: $green;
+        background-color: $d-red;
         padding: rem(16);
         width: 100%;
         height: rem(250);
