--- a/scss/object/project/contact/_p-contact.scss
+++ b/scss/object/project/contact/_p-contact.scss
@@ -271,7 +271,10 @@ input[type=checkbox]:checked + span.mwform-checkbox-field-text::after {
     text-align: center;
     a {
         text-decoration: underline;
-        @include txt-shadow
+        @include txt-border;
+        &::after {
+            height: 1px;
+        }
     }
 }
 
