--- a/scss/object/project/front-page/_p-news.scss
+++ b/scss/object/project/front-page/_p-news.scss
@@ -37,12 +37,11 @@
 }
 
 .p-news-cont {
-    max-width: 600px;
-    margin: 0 auto;
 }
 
 .p-news-cont__wrap {
-
+    max-width: 600px;
+    margin: 0 auto;
 }
 
 .p-news-cont__ttl {
@@ -94,6 +93,39 @@
     text-align: right;
     a {
         text-decoration: underline;
+    }
+}
+
+.p-news-more {
+    margin-top: rem(32);
+}
+
+.p-news-btn {
+    width: 175px;
+    margin: 0 auto;
+    a {
+        font-size: rem(20);
+        background-color: $d-green;
+        border: rem(1) solid $d-green;
+        line-height: calc(3.75rem - rem(4));
+        padding-right: rem(8);
+        @include btn-anime($white, rem(5));
+        &:hover {
+            color: $d-green;
+            &::before {
+                content:"＞";
+                right: rem(8);
+            }
+        }
+        &::before {
+            content:"＞";
+            position: absolute;
+            font-size: rem(18);
+            font-weight: bold;
+            right: rem(12);
+            transition: 0.5s;
+            top: 0;
+        }
     }
 }
 
