--- a/scss/object/project/common/_p-menu.scss
+++ b/scss/object/project/common/_p-menu.scss
@@ -36,8 +36,7 @@
     }
     a {
         display: flex;
-        align-items: center;
-        align-items: end;
+        align-items: flex-end;
         justify-content: center;
         width: 100%;
         height: 50px;
