--- a/scss/object/project/common/_p-cta.scss
+++ b/scss/object/project/common/_p-cta.scss
@@ -1,13 +1,22 @@
 @use "global" as *;
 
 .p-cta {
-    background-size: cover;
-    background-position: 0% 50%;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: 850px 700px;
     padding-top: 4rem;
     padding-bottom: 4rem;
+    &::before{
+        content:"";
+        display:block;
+        position:fixed;
+        top:0;
+        left:0;
+        z-index:-1;
+        width:100%;
+        height:100vh;
+        background-repeat:no-repeat;
+        background-position:15% 100%;
+        background-image:url('../img/moringa.jpg');
+        background-size:cover;
+    }
 }
 
 .p-cta-inner {
@@ -85,11 +94,6 @@
 }
 
 @include mq (sp) {
-    .p-cta {
-        background-size: cover;
-        background-position: 50% 50%;
-        background-repeat: no-repeat;
-    }
     .p-cta-copy {
         margin-bottom: 2rem;
         h3 {
