--- a/css_origin/style.css
+++ b/css_origin/style.css
@@ -997,6 +997,7 @@ a.next.page-numbers {
   font-size: 3.5rem;
   font-family: "Fahkwang", "Fjalla One", "Montserrat Subrayada", "Concert One", cursive, sans-serif;
   text-align: center;
+  text-shadow: 1px 0px 15px #222;
   text-transform: uppercase;
 }
 
@@ -1366,13 +1367,18 @@ a.next.page-numbers {
   margin-bottom: 1.875rem;
 }
 
-.p-contact-name {
-  line-height: 1.6875;
+.p-contact-nameTop {
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  align-items: center;
 }
 
 .p-contact-required {
   margin-left: 0.5rem;
-  padding: 0.25rem 0.5rem;
+  padding: 0.375rem 0.5rem;
   border-radius: 0.3125rem;
   background-color: #2C3848;
   color: #ffffff;
@@ -1382,7 +1388,7 @@ a.next.page-numbers {
 .p-contact-input {
   width: 100%;
   height: 50px;
-  margin-top: 0.75rem;
+  margin-top: 1rem;
   padding-left: 1.25rem;
   border: solid 0.125rem #2C3848;
   border-radius: 0.125rem;
