--- a/scss/object/project/common/_p-fv.scss
+++ b/scss/object/project/common/_p-fv.scss
@@ -31,6 +31,7 @@
     font-family: $ff_eng;
     text-transform: uppercase;
     color: $white;
+    text-shadow: 1px 0px 15px #222;
 }
 
 .p-fv-copy_sub {
