--- a/scss/object/project/contact/_p-contact.scss
+++ b/scss/object/project/contact/_p-contact.scss
@@ -30,13 +30,17 @@
     }
 }
 
+.p-contact-nameTop {
+    display: flex;
+    align-items: center;
+}
+
 .p-contact-name {
-    line-height: 1.6875;
 }
 
 .p-contact-required {
     font-size: rem(12);
-    padding: rem(4) rem(8);
+    padding: rem(6) rem(8);
     background-color: $navy;
     border-radius: rem(5);
     color: $white;
@@ -46,7 +50,7 @@
 .p-contact-input {
     width: 100%;
     height: 50px;
-    margin-top: 0.75rem;
+    margin-top: rem(16);
     padding-left: 1.25rem;
     border: solid rem(2) $navy;
     border-radius: rem(2);
