レビュー調整

--- a/scss/object/project/single-recipe/_p-detail.scss
+++ b/scss/object/project/single-recipe/_p-detail.scss
@@ -80,7 +80,7 @@
     max-width: 600px;
     margin: 0 auto;
     p {
-        display: none;
+        // display: none;
     }
 }
 
@@ -133,7 +133,7 @@ p.glsr-tag-value {
 
 .glsr-no-margins {
     margin-top: 1rem;
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
 }
 
 .glsr-button {
